# cookiecutter-glue-starter-kit

./: .editorconfig  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/docker/app/: .bash_aliases
{{cookiecutter.project_slug}}/docker/localstack/docker-entrypoint-initaws.d/: 001_init.sh
{{cookiecutter.project_slug}}/job/: {{cookiecutter.module_name}}.json
{{cookiecutter.project_slug}}/src/: __init__.py  app.py
{{cookiecutter.project_slug}}/tests/: app_test.py
